# RepoContract

./: .gitignore  Cargo.toml  Makefile
.devcontainer/: Dockerfile
.github/workflows/: pages.yml
docs/spec/: cli.md  contract-v1.md  github-actions.md
examples/: contract.rust.yml  contract.yml
schemas/: contract.v1.schema.json
src/: branch_protection.rs  config.rs  contract.rs  diff.rs  init.rs  lib.rs  loader.rs  main.rs  required_files.rs  schema.rs  validation.rs
src/cli/: args.rs  mod.rs  output.rs  runner.rs  util.rs
tests/: required_files.rs
