[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
globset = "0.4.15"
jsonschema = "0.17.1"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
toml = "0.8.19"
ureq = { version = "3.1.4", features = ["json"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
